# devofmudu

gstreamertest/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic2.c-1  cmake_install.cmake  hello.c-1  hello_test.VC.VC.opendb  hello_test.sln  input-selector.c-1  latency.c  test_hello.vcxproj  test_hello.vcxproj.filters
gstreamertest/Debug/: test_hello.ilk
gstreamertest/test_hello.dir/Debug/test_hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  (+3 more)
gstreamertest/x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello_test.sln  test_hello.vcxproj  test_hello.vcxproj.filters
ltest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  f_latency_test.vcxproj  f_latency_test.vcxproj.filters  f_test.c  latency_test.sln
ltest/Debug/: f_latency_test.ilk
ltest/f_latency_test.dir/Debug/f_latency_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ltest/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
ltest/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
(+4 files in other folders)
